# playshelf

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  .rustfmt.toml  Cargo.toml  README.md  Rocket.toml  package.json  pnpm-lock.yaml  sonar-project.properties  tsconfig.json  tsconfig.options.json
.github/workflows/: ci.yml
.moon/: toolchain.yml
.moon/tasks/: rust.yml  typescript.yml
apps/client/: moon.yml  package.json  pnpm-lock.yaml
apps/client/src-tauri/: Cargo.toml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/server/: Cargo.toml  diesel.toml  moon.yml
apps/server/src/: lib.rs  main.rs  schema.rs
apps/server/src/database/: artist.rs  mod.rs  track.rs
apps/server/src/database/migrations/2023-01-20-074234_create_basic_table/: down.sql  up.sql
apps/server/src/middlewares/: cors.rs
apps/server/src/models/: album.rs  artist.rs  mod.rs  track.rs
apps/server/src/routes/: artists.rs  audio.rs  errors.rs  misc.rs  mod.rs  tracks.rs
apps/server/src/utils/: database.rs  error.rs  mod.rs  response.rs
apps/server/src/utils/macros/: crud_database.rs  crud_handlers.rs  mod.rs
docs/concept/: architecture.drawio  architecture.excalidraw
