[package]
name = "playshelf-server"
version = "0.0.0"
description = ""
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
okapi = { version = "0.7.0-rc.1" }
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
dotenvy = "0.15"
thiserror = "1.0.38"